testsuite/keen.dg/abstract-020.c
/* { dg-do "compile" } */

// forward declarations
int printf(char *, ...);
void abort();

void f( int [][] ); // { dg-error "empty array size" }



